@@ -6,6 +6,7 @@ Good luck understanding these notes for myself :) Some of this stuff has already
 option to suppress errors
 
 
+review how :status is used. it should be AND.
 
 
 
